--- a/lib/clenver/assets/sample.yml
+++ b/lib/clenver/assets/sample.yml
@@ -1,6 +1,7 @@
 https://github.com/pietrushnic/workspace.git:
     link: dotfiles/gitignore $HOME/.gitignore
     link: dotfiles/bashrc ~/.bashrc
+    link: dotfiles/bashrc abc/.bashrc
     mkdir: workspace1
     upstream: https://github.com/pietrushnic/workspace.git
     run: echo "Finished"
